--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="login-box">
-    <div class="judul">K G S</div>
+    <div class="judul">S I J A</div>
     <img class="logo" src="https://lh3.googleusercontent.com/d/1Em6kwqdZfG27aKHEV8EUv4ehlKPCO_kN" alt="Logo">
     <form id="login-form">
       <input type="number" name="nis" placeholder="Masukkan NIS" class="inputtext" required>
@@ -79,9 +79,9 @@
   </div>
 
   <script>
-    const allowedNIS = ["2315541","2315542","2315543","2315544","2315545","2315546","2315547","2315548","2315549","2315550","2315551","2315552","2315553","2315555","2315556","2315557","2315558","2315559","2315560","2315561","2315562","2315563","2315564","2315565","2315566","2315567","2315568","2315569","2315570","2315571","2315572","2315573","2315574","2315575","2315576","2315578","2315579","2315580","2315581","2315582","2315583","2315584","2315585","2315586","2315587","2315588","2315589","2315590","2315591","2315592","2315593","2315594","2315595","2315596","2315597","2315598","2315599","2315600","2315601","2315602","2315603","2315604","2315605","2315606","2315607","2315608","2315609","2315610","2315611","2315612"
+    const allowedNIS = ["2315897","2315898","2315899","2315900","2315901","2315902","2315903","2315904","2315905","2315906","2315907","2315908","2315909","2315910","2315911","2315912","2315913","2315914","2315915","2315916","2315917","2315918","2315919","2315920","2315921","2315922","2315923","2315924","2315925","2315926","2315927","2315928","2315929","2315930","2315931","2315932","2315933","2315934","2315935","2315936","2315937","2315938","2315939","2315940","2315941","2315942","2315943","2315944","2315945","2315946","2315947","2315948","2315949","2315950","2315951","2315952","2315953","2315954","2315955","2315956","2315957","2315958","2315959","2315960","2315961","2315962","2315963","2315964","2315965","2315966","2315967","2315968"
 ];
-    const redirectURL = "https://sites.google.com/guru.smk.belajar.id/smkn-26-jakarta-kurikulum/sumatif-akhir-semester-genap/pelaksaan-sas/kelas-xi/kgs";
+    const redirectURL = "https://sites.google.com/guru.smk.belajar.id/smkn-26-jakarta-kurikulum/sumatif-akhir-semester-genap/pelaksaan-sas/kelas-xi/sija";
 
     const form = document.getElementById("login-form");
     const nisInput = form.elements["nis"];
