--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       background-color: #fff;
       text-align: center;
       box-sizing: border-box;
+      position: relative;
     }
     .judul {
       font-size: 18px;
@@ -65,6 +66,39 @@
       margin-bottom: 10px;
       display: none;
     }
+
+    /* Spinner dan overlay */
+    .overlay {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 20px;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 10;
+    }
+    .spinner {
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid #3498db;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin-bottom: 10px;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .loading-text {
+      font-size: 14px;
+      color: #2c3e50;
+    }
   </style>
 </head>
 <body>
@@ -76,23 +110,45 @@
       <div id="peringatan" class="warning">NIS tidak terdaftar!</div>
       <input type="submit" value="Login" class="tombol">
     </form>
+
+    <!-- Spinner overlay -->
+    <div class="overlay" id="loadingOverlay">
+      <div class="spinner"></div>
+      <div class="loading-text">Mohon tunggu, mengecek NIS...</div>
+    </div>
   </div>
 
   <script>
     const allowedNIS = ["2315897","2315898","2315899","2315900","2315901","2315902","2315903","2315904","2315905","2315906","2315907","2315908","2315909","2315910","2315911","2315912","2315913","2315914","2315915","2315916","2315917","2315918","2315919","2315920","2315921","2315922","2315923","2315924","2315925","2315926","2315927","2315928","2315929","2315930","2315931","2315932","2315933","2315934","2315935","2315936","2315937","2315938","2315939","2315940","2315941","2315942","2315943","2315944","2315945","2315946","2315947","2315948","2315949","2315950","2315951","2315952","2315953","2315954","2315955","2315956","2315957","2315958","2315959","2315960","2315961","2315962","2315963","2315964","2315965","2315966","2315967","2315968"
 ];
-    const redirectURL = "https://sites.google.com/guru.smk.belajar.id/smkn-26-jakarta-kurikulum/sumatif-akhir-semester-genap/pelaksaan-sas/kelas-xi/sija";
+
+    const redirectURL = "https://sites.google.com/guru.smk.belajar.id/smkn-26-jakarta-kurikulum/sumatif-akhir-semester-genap/pelaksanaan-pas/kelas-xi/sija";
+    const webAppURL = "https://script.google.com/macros/s/AKfycbwAMm8bdmue3K01nK1cbObk9UQBzMJPtA25CHXgxRL87XKAY5aYdJVKq1SAsA-81frCYA/exec";
 
     const form = document.getElementById("login-form");
     const nisInput = form.elements["nis"];
     const warning  = document.getElementById("peringatan");
+    const overlay  = document.getElementById("loadingOverlay");
 
     form.addEventListener("submit", function(e) {
       e.preventDefault();
       const nis = nisInput.value.trim();
 
       if (allowedNIS.includes(nis)) {
-        window.location.href = redirectURL;
+        overlay.style.display = "flex"; // Tampilkan loading spinner
+
+        // Kirim ke Google Sheets via Web App
+        fetch(webAppURL, {
+          method: "POST",
+          body: new URLSearchParams({ nis: nis }),
+        }).then(response => {
+          // Setelah tercatat, lakukan redirect
+          window.location.href = redirectURL;
+        }).catch(() => {
+          alert("Terjadi kesalahan saat mencatat ke Google Sheet.");
+          overlay.style.display = "none";
+        });
+
       } else {
         warning.style.display = "block";
       }
